Fix comments and suggestions tooltip
Add gap between suggestion and comment elements. To prevent the tooltip from covering the content of the item before it

--- a/weblate/static/style-bootstrap.css
+++ b/weblate/static/style-bootstrap.css
@@ -583,6 +583,12 @@ form + .login-label {
   padding: 0;
 }
 
+.container-gapped {
+  display: flex;
+  flex-direction: column;
+  gap: 25px;
+}
+
 .comment-content {
   border-radius: 0 5px 5px 5px;
   background-color: #e5f0f2;
